[package]
name = "cborcert"
version = "0.1.0"
authors = ["Hristozov, Stefan <stefan.hristozov@aisec.fraunhofer.de>"]
edition = "2018"

[dependencies]
serde = {version = "1.0.118", features = ["derive"] }
serde_cbor = "0.11.1"
ed25519-dalek = "1.0.1"
clap = "2.33.3"
rand = "0.7.3"
itertools = "0.9.0"
toml = "0.5.8"