[package]
name = "cborcert"
version = "0.1.0"
#authors = ["Hristozov, Stefan <hristozov.stefan@gmail.com>"]
edition = "2018"

[dependencies]
serde = {version = "1.0.118", features = ["derive"] }
serde_cbor = "0.11.1"
serde_bytes = "0.11.5"
serde_derive = "1.0.118"
ed25519-dalek = "1.0.1"
clap = "2.33.3"
rand = "0.7.3"
itertools = "0.9.0"
toml = "0.5.8"
ring = "0.16.19"
pkcs8 = "0.3.3"

[dev-dependencies]
assert_matches = "1.4"
